# stt

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  pyproject.toml  systemstt.spec
.claude/: settings.local.json
.claude/agents/: architect.md  developer.md  devops.md  product.md  reviewer.md  tester.md
.claude/skills/: build-workflow.md  quick-start.md
.github/workflows/: ci.yml
docs/: deployment.md
docs/bugs/: bug-001.md
docs/design/: design-spec.md
docs/mrd/: mrd.md
docs/reviews/: review-core.md  review-ui-infra.md
docs/specs/: 00-architecture-overview.md  01-project-setup.md  02-audio-capture.md  03-stt-engine.md  04-voice-commands.md  05-text-injection.md  06-hotkey-lifecycle.md  07-ui-layer.md  08-configuration.md
docs/tests/: test-plan.md
scripts/: build_app.sh
src/systemstt/: __init__.py  __main__.py  app.py  constants.py  controller.py  errors.py  logging_config.py  shutdown.py
src/systemstt/audio/: devices.py  level_meter.py  recorder.py
tests/: conftest.py  test_app.py  test_controller.py  test_errors.py
tests/audio/: test_audio_recorder.py  test_device_enumerator.py  test_level_meter.py
tests/commands/: test_command_executor.py  test_command_parser.py  test_command_registry.py
tests/config/: test_secure_store.py  test_settings_model.py  test_settings_store.py
tests/platform/: test_hotkey_manager.py  test_text_injector.py
tests/stt/: test_cloud_api.py  test_engine_abc.py  test_engine_manager.py  test_local_whisper.py  test_postprocess.py
tests/ui/: conftest.py  test_dropdown_menu.py  test_floating_pill.py  test_menu_bar.py  test_settings_window.py  test_theme.py  test_widgets.py
(+34 files in other folders)
