[project]
name = "systemstt"
version = "0.1.0"
description = "System-wide speech-to-text for macOS"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6,<7.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24,<2.0",
    "faster-whisper>=1.0.0",
    "httpx>=0.27",
    "pydantic>=2.5,<3.0",
    "pyobjc-core>=10.0",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-Quartz>=10.0",
    "pyobjc-framework-Security>=10.0",
    "pyobjc-framework-UserNotifications>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-qt>=4.3",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
    "pre-commit>=3.6",
]
build = [
    "pyinstaller>=6.0",
    "build>=1.0",
]

[project.scripts]
systemstt = "systemstt.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["systemstt"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "pass",
    "\\.\\.\\.",
]
show_missing = true
fail_under = 80

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
